<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fb="http://schemas.android.com/tools">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/txt_login_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_login"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimaryDark"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtPasswordLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_login_label"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:id="@+id/edtUsername"
                android:text="viettc"
                android:background="@drawable/blue_background_rectangle_round_corner"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
           android:layout_below="@+id/edtPasswordLayout1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:text="123"
                android:background="@drawable/blue_background_rectangle_round_corner"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/login"
            android:id="@+id/btnLogin"
            android:textAllCaps="false"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/edtPasswordLayout"
            android:layout_marginTop="10dp"
            android:background="@drawable/while_background_retangle_round_corner"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_login_with_google"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below ="@id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:padding="0dp"
            />
        <com.facebook.login.widget.LoginButton
            android:id="@+id/btn_login_with_faceebook"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_below ="@+id/btn_login_with_google"
            android:layout_centerHorizontal="true"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btn_login_with_faceebook"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/txt_new_user_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_new_user"/>

            <TextView
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_register_now"
                android:textStyle="italic"
                android:layout_toRightOf="@+id/txt_new_user_label"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorPrimaryDark"/>
        </RelativeLayout>



    </RelativeLayout>

</RelativeLayout>